2.2/default-deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: globalmanticsbooks
spec:
  podSelector: {}
  policyTypes:
  - Ingress
