2.2/globalmantics-web-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: globalmantics-web-policy
  namespace: globalmanticsbooks
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - {}
